<resources>
    <string name="app_name">简卡</string>

    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>
    <!--抽屉-->
    <string name="action_settings">设置</string>
    <string name="action_search">查找</string>
    <string name="action_create_card_list">新建卡组</string>
    <string name="action_add_folder">导入图册</string>
    <string name="action_message">消息列表</string>
    <string name="action_friend">我的好友</string>
    <string name="communicate">交流</string>
    <string name="action_arrange">整理卡片</string>
    <string name="action_share">分享APP</string>
    <string name="action_recycle_bin">回收站</string>
    <string name="action_clear">清空</string>
    <string name="email">richardlus@foxmail.com</string>
    <string name="title">title</string>
    <string name="action_show_hidden">显示隐藏卡组</string>
    <string name="action_new_card_list">新建卡组</string>

    <!--账号设置-->
    <string name="pref_category_account">账号</string>
    <string name="pref_account_personal">个人</string>
    <string name="pref_account_team">团队</string>
    <string name="pref_account_team_not_yet">后续推出</string>


    <!--外观设置-->
    <string name="pref_category_appearance">外观</string>
    <string name="pref_theme_label">主题</string>
    <string name="pref_theme_key" translatable="false">theme</string>
    <string name="pref_theme_label_purple">紫色</string>
    <string name="pref_theme_label_red">红色</string>
    <string name="pref_theme_label_blue">蓝色</string>
    <string name="pref_theme_label_yellow">黄色</string>
    <string name="pref_theme_label_pink">粉色</string>
    <string name="pref_theme_purple_value" translatable="false">purple</string>
    <string name="pref_theme_red_value" translatable="false">red</string>
    <string name="pref_theme_blue_value" translatable="false">blue</string>
    <string name="pref_theme_yellow_value" translatable="false">yellow</string>
    <string name="pref_theme_pink_value" translatable="false">pink</string>


    <!--卡组设置-->
    <string name="pref_category_card_list">卡组</string>
    <string name="show_hidden_key" translatable="false">card_list</string>
    <string name="show_hidden_card">显示</string>
    <string name="hide_hidden_card">隐藏</string>
    <string name="pref_show_hidden_label">隐藏卡组</string>


    <!--GTD设置-->
    <string name="pref_category_gtd">GTD</string>
    <string name="pref_remind_label">提醒时间</string>
    <string name="pref_remind_key" translatable="false">remind_time</string>
    <string name="pref_remind_time_10" translatable="false">10</string>
    <string name="title_holder">标题占位String</string>

    <!--回收站设置-->
    <string name="pref_category_recycle_bin">回收站</string>
    <string name="pref_recycle_bin_save_time_key" translatable="false">save_time</string>
    <string name="pref_recycle_bin_save_time_label">回收站保存时间</string>
    <string name="pref_recycle_bin_save_time_label_7">一星期</string>
    <string name="pref_recycle_bin_save_time_label_14">两星期</string>
    <string name="pref_recycle_bin_save_time_label_30">一个月</string>
    <string name="pref_recycle_bin_save_time_value_7" translatable="false">7</string>
    <string name="pref_recycle_bin_save_time_value_14" translatable="false">14</string>
    <string name="pref_recycle_bin_save_time_value_30" translatable="false">30</string>


    <string name="pref_category_others">其他</string>
    <string name="pref_feedback_key" translatable="false">feedback</string>
    <string name="pref_feedback_label">意见反馈</string>
    <string name="pref_donate_key" translatable="false">donate</string>
    <string name="pref_donate_label">捐赠</string>
    <string name="pref_donate_summary">觉得App有用话,随意打赏</string>
    <string name="pref_rate_the_app_key" translatable="false">rate</string>
    <string name="pref_rate_the_app_label">在应用市场评分</string>
    <string name="action_refresh">刷新/同步</string>
    <string name="enter_a_title">卡片标题</string>
    <string name="enter_the_content">请输入记录的文字……</string>
    <string name="time_example">2017年7月20日   9:36</string>
    <string name="new_card_activity">创建卡片</string>
    <string name="card_theme_color">卡色</string>
    <string name="important_or_emergent">等级</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <style name="card_height_one_column">card_height</style>

    <string name="card_theme_blue">蓝</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_card_group">所有卡组</string>
    <string name="card_group_inbox">收信箱</string>
    <string name="card_image">卡中图片</string>
    <string name="save_card">保存</string>
    <string name="card_share">分享</string>
    <string name="camera_image">相机</string>
    <string name="content_null">怎能没有灵感、想法呢！</string>

    <!--任务等级-->
    <string name="card_grade">等级：</string>
    <string name="task_regular">普通卡片</string>
    <string name="task_important_emergent">很重要-很紧急</string>
    <string name="task_unimportant_emergent">不重要-很紧急</string>
    <string name="task_important_not_emergent">很重要-不紧急</string>
    <string name="task_unimportant_not_emergent">不重要-不紧急</string>
    <string name="card_insert_image">插入图片</string>
    <string name="input_card_group_title">卡组名</string>
    <string name="not_achieved_yet">还没有实现，敬请期待</string>
    <string name="task">任务</string>
    <string name="publish_successfully_and_share">发表成功，立刻分享？</string>
    <string name="share_accept">好的</string>
    <string name="share_reject">以后再说</string>
    <string name="network_need">需要网络支持！</string>
    <string name="network_configuration">进行网络配置</string>
    <string name="quit">退出</string>
    <string name="selet_option">选择操作</string>
    <string name="messagebox_cannot_delete">收信箱不能被删除</string>
    <string name="delete_confirmation">删除确认</string>
    <string name="continue_delete_for_unempty_cardgroup">卡组不为空，继续删除吗？</string>
    <string name="cancel">取消</string>
    <string name="click_cancel">你点击了取消按钮~</string>
    <string name="make_sure">确定</string>
    <string name="have_deleted">已删除</string>
    <string name="delete_failed">删除失败</string>
    <string name="message_write_successful">信息已写入SharedPreference中</string>
</resources>
