<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        android:orderInCategory="1" />
    <item
        android:id="@+id/action_new_card_list"
        android:orderInCategory="98"
        android:title="@string/action_new_card_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_hidden"
        android:orderInCategory="99"
        android:title="@string/action_show_hidden"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>