<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_insert_image"
        android:orderInCategory="98"
        android:icon="@drawable/ic_action_insert_image"
        android:title="@string/card_insert_image"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="99"
        android:icon="@drawable/ic_action_share"
        android:title="@string/card_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save_card"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="ifRoom" />
</menu>