<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:id="@+id/cv_item"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="8dp"
    card_view:cardBackgroundColor="#ffffff"
    card_view:cardElevation="5dp"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <TextView
            android:id="@+id/tv_card_item_title"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:text="@string/title_holder"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintLeft_toLeftOf="parent" />
        <TextView
            android:id="@+id/tv_card_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="2017/07/23"
            android:textSize="15sp"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintBottom_toTopOf="@+id/img_bg"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/card_group"
            card_view:layout_constraintVertical_bias="1.0"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/card_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/card_group_inbox"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />
        <ImageView
            android:id="@+id/img_bg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            card_view:layout_constraintVertical_weight="3"
            android:background="@drawable/avatar"
            android:scaleType="centerCrop"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_card_item_title"
            android:layout_marginEnd="0dp"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/card_image"
            android:layout_marginRight="0dp" />


        <TextView
            android:background="#88ffffff"
            android:textColor="#000000"
            android:id="@+id/card_content"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:padding="8dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="0dp"
            android:text="@string/enter_the_content"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>

