<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >

        <ImageView
            android:id="@+id/task_item_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/card_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/task_image_important_emergent" />

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/task_item_title"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_add_folder"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="0dp"
                    app:layout_constraintLeft_toLeftOf="parent" />
                <TextView
                    android:id="@+id/task_item_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2017/07/23"
                    android:textSize="15sp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/task_item_content"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:background="#88ffffff"
                    android:paddingLeft="0dp"
                    android:paddingStart="0dp"
                    android:paddingRight="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/enter_the_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/task_item_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" />


            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

</android.support.v7.widget.CardView>

