<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp">

    <android.support.percent.PercentFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            app:layout_widthPercent="100%"
            app:layout_aspectRatio="175%">
            <TextView
                android:id="@+id/task_item_title"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="8dp"
                android:text="2017/07/23"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/card_item_image"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/card_item_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:textSize="15sp"
                android:text="@string/card_group_inbox"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/card_item_date" />

            <ImageView
                android:id="@+id/card_item_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/card_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_item_title"
                app:srcCompat="@drawable/background_inbox" />


            <TextView
                android:id="@+id/card_item_content"
                android:layout_width="0dp"
                android:layout_height="65dp"
                app:layout_heightPercent="35%"
                android:layout_marginBottom="8dp"
                android:background="#88ffffff"
                android:padding="8dp"
                android:text="@string/enter_the_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


        </android.support.constraint.ConstraintLayout>

    </android.support.percent.PercentFrameLayout>
</android.support.v7.widget.CardView>

