<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="tech.jianka.activity.NewCardActivity">


    <EditText
        android:id="@+id/new_card_title"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:hint="@string/enter_a_title"
        android:textColor="@color/lightgray"
        android:textColorHint="@color/lightgray"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />





    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/new_card_task_selector"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/new_card_title"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/new_card_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card_grade" />

        <RadioButton
            android:id="@+id/task_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="" />

        <RadioButton
            android:id="@+id/task_important_emergent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <RadioButton
            android:id="@+id/task_important_not_emergent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <RadioButton
            android:id="@+id/task_unimportant_emergent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <RadioButton
            android:id="@+id/task_unimportant_not_emergent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <TextView
            android:id="@+id/new_card_task_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_regular" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/camera_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ic_camera_alt_black_48dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_card_title"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/camera_image"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_image"
        android:layout_marginTop="4dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />


    <Spinner
        android:id="@+id/new_card_group_selector"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:entries="@array/data"
        android:spinnerMode="dialog"
        android:gravity="center"
        android:paddingLeft="140dp"
        android:paddingRight="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <!--    <ScrollView
            android:id="@+id/new_card_scroll_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/camera_image"
            app:layout_constraintVertical_bias="0.0">-->

    <EditText
        android:id="@+id/new_card_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="7.69"
        android:background="@null"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_the_content"
        android:textColor="@color/lightgray"
        android:textColorHint="@color/lightgray"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        app:layout_constraintTop_toBottomOf="@+id/camera_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <!--    </ScrollView>-->


    <!--<RadioGroup-->
    <!--android:id="@+id/eventSelector"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:layout_marginLeft="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:orientation="horizontal"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintLeft_toLeftOf="parent">-->

    <!--<TextView-->
    <!--android:id="@+id/newCardEventLevel"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:text="@string/important_or_emergent" />-->

    <!--<RadioButton-->
    <!--android:id="@+id/newCardRegular"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:checked="true" />-->

    <!--<RadioButton-->
    <!--android:id="@+id/newCardImportantEmergent"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1" />-->

    <!--<RadioButton-->
    <!--android:id="@+id/newCardImportantNotEmergent"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1" />-->

    <!--<RadioButton-->
    <!--android:id="@+id/newCardUnimportantEmergent"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1" />-->

    <!--<RadioButton-->
    <!--android:id="@+id/newCardUnimportantNotEmergent"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1" />-->

    <!--<TextView-->
    <!--android:id="@+id/eventLevelIdentifier"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:text="@string/event_regular" />-->
    <!--</RadioGroup>-->


</android.support.constraint.ConstraintLayout>

